# pict-wasm

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.TXT  Makefile  Microsoft.Test.Pict.nuspec  Microsoft.Test.Pict.targets  README.md  SECURITY.md  eslint.config.js  install_emsdk.sh  mise.toml  package-lock.json  package.json  pict.sln  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
.devcontainer/: devcontainer.json  install_emsdk.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml  nuget-publish.yml  wasm-main.yml  wasm-publish.yml  wasm_build.yml  wasm_publish.yml
api/: pictapi.h  pictapi.vcxproj
api-usage/: pictapi-usage.vcxproj
benchmark/: CMakeLists.txt  pict_benchmark.cpp
cli/: pict.cpp  pictcli.vcxproj
clidll/: pictclidll.vcxproj
clidll-usage/: pictclidll-usage.vcxproj
doc/: pict.md
scripts/: README.md  compare-uniques.pl  count-uniques.pl
test/: CMakeLists.txt
wasm-src/: errors.ts  index.mts  index.ts  runner.mts  runner.ts  types.mts  types.ts
wasm-src/browser/: index.ts  runner.ts
wasm-src/node/: runner.ts
wasm-src/universal/: runner.ts
wasm-test/: e2e.spec.ts
wasm-test/browser/: e2e.spec.ts
wasm-test/node/: e2e.spec.ts
wasm-test/universal/: e2e.spec.ts
